# medic_analysis

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
matlab_scripts/: Cluster_correct_ttestpaired_cifti.m  FisherTransform.m  MEDIC_PipelineComparison.m  cluster_correct.m  explore_MEDIC.asv  explore_MEDIC.m  paircorr_mod.m  paircorr_mod_diag.m  split_groups.py
matlab_scripts/cifti_utilities/: Make_cifti_distmat.m  Make_rotations.m  cifti_cluster.m  cifti_data_into_common_subcort_space.m  cifti_to_border.m  cifti_to_flatmap.m  make_cifti_label_powercolors.m  map_vol_to_cifti.m  render_subcort_and_map_ciftidata.m  rotate_cifti.m  subcort_network_borders.m  upsample_cifti_to_164.m  wb_surfer_wrapper.m
matlab_scripts/read_write_cifti_32ksurface/fileio/: ft_write_cifti_mod_32ksurface.m  readme.txt
medic_analysis/common/: __init__.py  align.py  bias_field.py  distortion.py  figures.py
medic_analysis/scripts/: __init__.py  alignment_metrics.py  cerebellum_surface.py  cross_run_stability.py  cross_session_stability.py  flash_analysis.py  flash_processing.py  group_average_compare.py  group_template_compare.py  hausdorff_distance_analysis.py  head_position_analysis.py  head_position_cat_analysis.py  head_position_processing.py  head_position_processing_2.py  high_motion.py  medic_stats.py  medic_vs_topup_figure.py  new_sequence_analysis.py  new_sequence_processing.py  paper_figures.py  resp_analysis.py  resp_processing.py  spotlight.py  super_linear_model.py  tSNR_processing.py
